# Hoor_Red

./: README.md
Sensor/: CMakeLists.txt  prj.conf
Sensor/scu_sensors/: scu_sensors.c  scu_sensors.h
Sensor/src/: main.c
